--- a/sky_frontend/about.html
+++ b/sky_frontend/about.html
@@ -10,7 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&family=Playfair+Display:ital,wght@0,700;1,400&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="/static/css/style.css">
+
 </head>
 
 <body>
@@ -63,5 +64,6 @@
     </footer>
 
 </body>
+
 
 </html>
