--- a/sky_frontend/about.html
+++ b/sky_frontend/about.html
@@ -20,8 +20,8 @@
         <nav class="container">
             <a href="index.html" class="logo">✨ Starlight</a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -67,3 +67,4 @@
 
 
 </html>
+
