--- a/sky_frontend/index.html
+++ b/sky_frontend/index.html
@@ -27,8 +27,8 @@
         <nav class="container">
             <a href="index.html" class="logo">✨ Starlight</a>
             <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/about">About</a></li>
             </ul>
         </nav>
     </header>
@@ -130,5 +130,6 @@
     </footer>
     <script src="/static/js/main.js"></script>
 </body>
+
 
 </html>
